# SDS-CP035-gluco-track

./: .gitignore  CONTRIBUTING.md  README.md  noora-CP035.ipynb  requirements.txt
advanced/: REPORT.md
advanced/submissions/team-members/blake-lawall/: .gitignore  PROJECT_SUMMARY.md  README.md  REPORT.md  create_notebooks.py  pyproject.toml  setup.py  test_kernel.py
advanced/submissions/team-members/blake-lawall/notebooks/: 01_setup_and_eda.ipynb  01_setup_eda.ipynb  02_feature_engineering.ipynb  README.md  week1_eda.ipynb  week2_feature_engineering.ipynb  week3_neural_network.ipynb  week4_model_tuning.ipynb  week5_deployment.ipynb
advanced/submissions/team-members/blake-lawall/src/: __init__.py
advanced/submissions/team-members/blake-lawall/src/models/: __init__.py  neural_network.py
advanced/submissions/team-members/blake-lawall/src/training/: __init__.py  trainer.py
advanced/submissions/team-members/blake-lawall/tests/: __init__.py  test_dataset.py
advanced/submissions/team-members/rajan-hans/: .gitignore  REPORT.md  week_1_eda.ipynb  week_2_feat_eng.ipynb  week_2_feat_engg.ipynb  week_2_feat_engg_old.ipynb
advanced/submissions/team-members/sheila-adams/: sheila-gluco-track-EDA.ipynb  sheila-gluco-track.ipynb
advanced/submissions/team-members/vijai/: README.md
advanced/submissions/team-members/yan-cotta/: README.md  REPORT.md  week_1_eda.ipynb  week_2_feature_engineering.ipynb  week_3_model_development.ipynb  week_4_tuning_and_explainability.ipynb
beginner/: README.md  REPORT.md
beginner/submissions/team-members/BartGoodell/: REPORT.md
beginner/submissions/team-members/NooraAlakulppi/: noora-CP035.ipynb
beginner/submissions/team-members/Shamsudeen-Bankole/: .gitignore  GlucoTrack.ipynb  GlucoTrack_ML.ipynb  README.md  REPORT.md
beginner/submissions/team-members/Shamsudeen-Bankole/Dataset/: data_integrity_check.py  duplicate_analysis.py  formatting_analysis.py  load_diabetes_data.py
beginner/submissions/team-members/Shamsudeen-Bankole/GlucoTrackenv/: pyvenv.cfg
beginner/submissions/team-members/Shamsudeen-Bankole/GlucoTrackenv/Scripts/: activate  activate.bat
beginner/submissions/team-members/amyn-batliwala/: exploratory-data-analysis.ipynb
beginner/submissions/team-members/celia-markoya/: gluco-track.ipynb
