[project]
name = "gluco-track-blake-lawall"
version = "0.1.0"
description = "Environment and notebooks for BRFSS 2015 diabetes analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "jupyter>=1.0,<2",
    "ipykernel>=6.29,<7",
    "nbformat>=5.10,<6",
]

[tool.uv]
dev-dependencies = []


